--- a/qUnitTest/runner.htm
+++ b/qUnitTest/runner.htm
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
 	<title>QUnit Tests for setImmediate</title>
 
-	<script type="text/javascript" src="../setImmediate.js"></script>
+	<script type="text/javascript" src="../dist/setImmediate.js"></script>
 
 	<script type="text/javascript" src="tests.js"></script>
 
