--- a/test/browserOnly/index.html
+++ b/test/browserOnly/index.html
@@ -11,6 +11,8 @@
         <script>mocha.setup({ ui: "bdd", slow: Infinity });</script>
         <script src="../../dist/immediate.js"></script>
         <script src="./tests.js"></script>
-        <script>mocha.run();</script>
+        <script>  
+          if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
+      else { mocha.run(); }</script>
     </body>
 </html>
