--- a/test/index.html
+++ b/test/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <title>Real-Browser Only setImmediate Tests</title>
-        <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
-   <script src="../node_modules/mocha/mocha.js"></script>
-   <script src="../node_modules/chai/chai.js"></script>
+        <link rel="stylesheet" href="mocha.css" />
+   <script src="mocha.js"></script>
+   <script src="chai.js"></script>
         <script src="../dist/immediate.js"></script>
          <script src="tests.js"></script>
    <script>  
