--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,7 @@
         <title>Real-Browser Only setImmediate Tests</title>
         <link rel="stylesheet" href="mocha.css" />
    <script src="mocha.js"></script>
-   <script src="chai.js"></script>
+   <script src="assert.js"></script>
         <script src="../dist/immediate.js"></script>
          <script src="tests.js"></script>
    <script>  
